--- a/src/app/ideation/components/add-idea/add-idea.component.scss
+++ b/src/app/ideation/components/add-idea/add-idea.component.scss
@@ -253,3 +253,13 @@
     flex-direction: column;
   }
 }
+
+.gender_wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+
+  .error_label {
+    margin-top: 0;
+  }
+}
