fix restricting numbers

--- a/src/app/ideation/components/add-idea/add-idea.component.html
+++ b/src/app/ideation/components/add-idea/add-idea.component.html
@@ -371,7 +371,7 @@
                   (ngModelChange)="ngModelChange('demographics_' + key, $event)"
                   (blur)="ngModelBlur('demographics_' + key)"
                   type="number"
-                  onkeypress="return event.charCode >= 48 && event.charCode <= 57"
+                  (keypress)="numberOnly($event)"
                 />
 
                 <label
