fix edit idea dem fields

--- a/src/app/ideation/components/ideabox/ideabox.component.html
+++ b/src/app/ideation/components/ideabox/ideabox.component.html
@@ -256,5 +256,5 @@
     </div>
   </div>
 </div>
-<edit-idea *ngIf="showEdit" [idea]="idea" [topicId]="topic.id" [ideation]="ideation"
+<edit-idea *ngIf="showEdit" [idea]="idea" [topicId]="topic.id" [ideation]="ideation" [topicCountry]="topic.country"
   (showEdit)="toggleEdit($event)"></edit-idea>
