--- a/src/app/ideation/components/edit-idea/edit-idea.component.html
+++ b/src/app/ideation/components/edit-idea/edit-idea.component.html
@@ -93,55 +93,274 @@
           ></span>
         </label>
       </cos-input>
+
       <div
         *ngIf="ideation.allowAnonymous && getDemographicKeys().length > 0"
         class="anonymous_info"
       >
-        <cos-input
-          *ngFor="let key of getDemographicKeys()"
-          placeholder="{{
-            'VIEWS.IDEATION_CREATE.DEMOGRAPHICS_DATA_' + key
-              | uppercase
-              | translate
-          }}"
-        >
-          <input
-            [id]="'demographics_' + key"
-            [name]="'demographics_' + key"
-            [formControlName]="'demographics_' + key"
-            [(ngModel)]="ideation.demographicsConfig![key].value"
-            autocomplete="off"
-            placeholder="{{
-              'VIEWS.IDEATION_CREATE.DEMOGRAPHICS_DATA_' + key
-                | uppercase
-                | translate
-            }}"
-            class="gray_borders"
-            [ngClass]="{
-              error_input:
+        <ng-container *ngFor="let key of getDemographicKeys()">
+          <ng-container [ngSwitch]="key">
+            <ng-container *ngSwitchCase="'residence'">
+              <ng-container *ngIf="isCountryEstonia; else common_field">
+                <div class="dropdown_wrapper">
+                  <div class="dropdown" [cosDropdown]>
+                    <div
+                      class="selection"
+                      [ngClass]="{
+                        error_input: filtersData['residence'].error
+                      }"
+                    >
+                      <div class="selected_item">
+                        <span
+                          *ngIf="!filtersData['residence'].selectedValue"
+                          class="selected_item_placeholder"
+                          >{{
+                            "VIEWS.IDEATION_CREATE.DEMOGRAPHICS_DATA_" + key
+                              | uppercase
+                              | translate
+                          }}</span
+                        >
+                        <span *ngIf="filtersData['residence'].selectedValue">{{
+                          filtersData["residence"].selectedValue
+                        }}</span>
+                      </div>
+                      <svg
+                        width="24"
+                        height="24"
+                        viewBox="0 0 24 24"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path
+                          d="M17 10L12 15L7 10"
+                          stroke="#2C3B47"
+                          stroke-width="2"
+                          stroke-linecap="round"
+                        />
+                      </svg>
+                    </div>
+                    <div class="options">
+                      <ng-container
+                        *ngFor="let option of filtersData['residence'].items"
+                      >
+                        <div
+                          class="option"
+                          (click)="setFilterValue('residence', option.value)"
+                        >
+                          <span>{{ option.title }}</span>
+                        </div>
+                      </ng-container>
+                    </div>
+                  </div>
+
+                  <label
+                    [for]="'demographics_' + key"
+                    class="error_label"
+                    *ngIf="filtersData['residence'].error"
+                  >
+                    <span
+                      class="error_text"
+                      translate="COMPONENTS.ADD_IDEA.FIELD_IS_MANDATORY"
+                    ></span>
+                  </label>
+                </div>
+              </ng-container>
+
+              <ng-template #common_field>
+                <cos-input
+                  placeholder="{{
+                    'VIEWS.IDEATION_CREATE.DEMOGRAPHICS_DATA_' + key
+                      | uppercase
+                      | translate
+                  }}"
+                >
+                  <input
+                    [id]="'demographics_' + key"
+                    [name]="'demographics_' + key"
+                    [formControlName]="'demographics_' + key"
+                    [(ngModel)]="ideation.demographicsConfig![key].value"
+                    autocomplete="off"
+                    placeholder="{{
+                      'VIEWS.IDEATION_CREATE.DEMOGRAPHICS_DATA_' + key
+                        | uppercase
+                        | translate
+                    }}"
+                    class="gray_borders"
+                    [ngClass]="{
+                error_input:
+                  ideaForm.controls['demographics_' + key].errors &&
+                  ideaForm.controls['demographics_' + key].errors?.['required'] &&
+                  ideaForm.controls['demographics_' + key].touched
+              }"
+                    [required]="ideation.demographicsConfig![key].required"
+                    (ngModelChange)="
+                      ngModelChange('demographics_' + key, $event)
+                    "
+                    (blur)="ngModelBlur('demographics_' + key)"
+                  />
+
+                  <label
+                    [for]="'demographics_' + key"
+                    class="error_label"
+                    *ngIf="
                 ideaForm.controls['demographics_' + key].errors &&
                 ideaForm.controls['demographics_' + key].errors?.['required'] &&
                 ideaForm.controls['demographics_' + key].touched
-            }"
-            [required]="ideation.demographicsConfig![key].required"
-          />
+              "
+                  >
+                    <span
+                      class="error_text"
+                      translate="COMPONENTS.ADD_IDEA.FIELD_IS_MANDATORY"
+                    ></span>
+                  </label>
+                </cos-input>
+              </ng-template>
+            </ng-container>
 
-          <label
-            [for]="'demographics_' + key"
-            class="error_label"
-            *ngIf="
-              ideaForm.controls['demographics_' + key].errors &&
-              ideaForm.controls['demographics_' + key].errors?.['required'] &&
-              ideaForm.controls['demographics_' + key].touched
-            "
-          >
-            <span
-              class="error_text"
-              translate="COMPONENTS.ADD_IDEA.FIELD_IS_MANDATORY"
-            ></span>
-          </label>
-        </cos-input>
+            <ng-container *ngSwitchCase="'gender'">
+              <div class="gender_wrapper">
+                <div class="dropdown" [cosDropdown]>
+                  <div
+                    class="selection"
+                    [ngClass]="{
+                      error_input: filtersData['gender'].error
+                    }"
+                  >
+                    <div class="selected_item">
+                      <span
+                        *ngIf="!filtersData['gender'].selectedValue"
+                        class="selected_item_placeholder"
+                        >{{
+                          "VIEWS.IDEATION_CREATE.DEMOGRAPHICS_DATA_" + key
+                            | uppercase
+                            | translate
+                        }}</span
+                      >
+                      <span *ngIf="filtersData['gender'].selectedValue">{{
+                        "VIEWS.IDEATION_CREATE.DEMOGRAPHICS_DATA_GENDER_" +
+                          filtersData["gender"].selectedValue
+                          | uppercase
+                          | translate
+                      }}</span>
+                    </div>
+                    <svg
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M17 10L12 15L7 10"
+                        stroke="#2C3B47"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                      />
+                    </svg>
+                  </div>
+                  <div class="options">
+                    <ng-container
+                      *ngFor="let option of filtersData['gender'].items"
+                    >
+                      <div
+                        class="option"
+                        (click)="setFilterValue('gender', option.value)"
+                      >
+                        <span>{{ option.title | translate }}</span>
+                      </div>
+                    </ng-container>
+                  </div>
+                </div>
+
+                <input
+                  *ngIf="filtersData['gender'].selectedValue === 'other'"
+                  [id]="'demographics_' + key"
+                  [name]="'demographics_' + key"
+                  [formControlName]="'demographics_' + key"
+                  [(ngModel)]="ideation.demographicsConfig![key].value"
+                  autocomplete="off"
+                  placeholder="{{
+                    'VIEWS.IDEATION_CREATE.DEMOGRAPHICS_DATA_GENDER_PLACEHOLDER'
+                      | translate
+                  }}"
+                  class="gray_borders"
+                  (ngModelChange)="ngModelChange('demographics_' + key, $event)"
+                  (blur)="ngModelBlur('demographics_' + key)"
+                />
+
+                <label
+                  [for]="'demographics_' + key"
+                  class="error_label"
+                  *ngIf="
+                  filtersData['gender'].error ||
+                  (filtersData['gender'].selectedValue === 'other' && ideaForm.controls['demographics_' + key].errors &&
+                ideaForm.controls['demographics_' + key].errors?.['required'] &&
+                ideaForm.controls['demographics_' + key].touched)
+                  "
+                >
+                  <span
+                    class="error_text"
+                    translate="COMPONENTS.ADD_IDEA.FIELD_IS_MANDATORY"
+                  ></span>
+                </label>
+              </div>
+            </ng-container>
+
+            <ng-container *ngSwitchCase="'age'">
+              <cos-input
+                placeholder="{{
+                  'VIEWS.IDEATION_CREATE.DEMOGRAPHICS_DATA_' + key
+                    | uppercase
+                    | translate
+                }}"
+              >
+                <input
+                  [id]="'demographics_' + key"
+                  [name]="'demographics_' + key"
+                  [formControlName]="'demographics_' + key"
+                  [(ngModel)]="ideation.demographicsConfig![key].value"
+                  autocomplete="off"
+                  placeholder="{{
+                    'VIEWS.IDEATION_CREATE.DEMOGRAPHICS_DATA_' + key
+                      | uppercase
+                      | translate
+                  }}"
+                  class="gray_borders"
+                  [ngClass]="{
+                error_input:
+                  ideaForm.controls['demographics_' + key].errors &&
+                  ideaForm.controls['demographics_' + key].errors?.['required'] &&
+                  ideaForm.controls['demographics_' + key].touched
+              }"
+                  [required]="ideation.demographicsConfig![key].required"
+                  (ngModelChange)="ngModelChange('demographics_' + key, $event)"
+                  (blur)="ngModelBlur('demographics_' + key)"
+                  type="number"
+                  (keypress)="numberOnly($event)"
+                />
+
+                <label
+                  [for]="'demographics_' + key"
+                  class="error_label"
+                  *ngIf="
+                ideaForm.controls['demographics_' + key].errors &&
+                ideaForm.controls['demographics_' + key].errors?.['required'] &&
+                ideaForm.controls['demographics_' + key].touched
+              "
+                >
+                  <span
+                    class="error_text"
+                    translate="COMPONENTS.ADD_IDEA.FIELD_IS_MANDATORY"
+                  ></span>
+                </label>
+              </cos-input>
+            </ng-container>
+
+            <ng-container *ngSwitchDefault />
+          </ng-container>
+        </ng-container>
       </div>
+
       <textarea
         cosmarkdown
         name="description"
