--- a/src/app/ideation/components/idea/idea-dialog.component.html
+++ b/src/app/ideation/components/idea/idea-dialog.component.html
@@ -451,4 +451,4 @@
     </div>
   </div>
 </div>
-<edit-idea *ngIf="showEdit" [idea]="idea" [topicId]="topic.id" [ideation]="ideation" (showEdit)="toggleEdit($event)"></edit-idea>
+<edit-idea *ngIf="showEdit" [idea]="idea" [topicId]="topic.id" [ideation]="ideation" (showEdit)="toggleEdit($event)" [topicCountry]="topic.country"></edit-idea>
