add images loader

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -597,6 +597,16 @@ html {
   }
 }
 
+.idea_images_loading {
+  display: none;
+}
+
+.images_loading {
+  .idea_images_loading {
+    display: block;
+  }
+}
+
 .topic_content_wrap {
   display: flex;
   flex-direction: column;
