--- a/src/app/ideation/components/add-idea/add-idea.component.scss
+++ b/src/app/ideation/components/add-idea/add-idea.component.scss
@@ -72,6 +72,7 @@
   gap: 16px;
   box-shadow: 0px -8px 20px 0px rgba(220, 231, 240, 0.1),
     0px -12px 16px 0px rgba(50, 85, 112, 0.04);
+  overflow-y: auto;
 
   @include mixins.tablet {
     position: fixed;
