--- a/src/app/ideation/components/ideabox/ideabox.component.scss
+++ b/src/app/ideation/components/ideabox/ideabox.component.scss
@@ -138,6 +138,12 @@
         height: 32px;
         border-radius: 40px;
         position: relative;
+
+        svg {
+          min-width: 16px;
+          min-height: 16px;
+        }
+
         &:hover {
           background-color: var(--color-surfaces);
         }
